@@ -887,345 +887,4 @@ buildTtime=${maven.build.timestamp}
         <finalName>haku-app</finalName>
     </build>
 
-    <profiles>
-
-        <profile>
-            <id>clover</id>
-            <properties>
-                <clover.fullRunEvery>500</clover.fullRunEvery>
-                <clover.generateHistorical>true</clover.generateHistorical>
-                <clover.base>/data00/atlassian/application-data/bamboo/clover_haku</clover.base>
-                <clover.historyDir>${clover.base}/history</clover.historyDir>
-                <clover.snapshot>${clover.base}/snapshot/clover.snapshot</clover.snapshot>
-                <clover.cloverDatabase>${clover.base}/db/clover.db</clover.cloverDatabase>
-            </properties>
-
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-antrun-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>clean-clover</id>
-                                <phase>clean</phase>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                                <configuration>
-                                    <tasks>
-                                        <echo>Clean clover output directory from ${clover.base}.</echo>
-                                        <delete includeemptydirs="true" failonerror="false">
-                                            <fileset dir="${clover.base}">
-                                                <include name="**/**"/>
-                                                <exclude name="history/**"/>
-                                            </fileset>
-                                        </delete>
-                                        <delete includeemptydirs="true" failonerror="false">
-                                            <fileset dir="${clover.outputDirectory}">
-                                                <include name="**/**"/>
-                                            </fileset>
-                                        </delete>
-                                    </tasks>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>clean-clover-report</id>
-                                <phase>post-integration-test</phase>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                                <configuration>
-                                    <tasks>
-                                        <echo>Clean clover report directory from ${clover.outputDirectory}.</echo>
-                                        <delete includeemptydirs="true" failonerror="false">
-                                            <fileset dir="${clover.outputDirectory}">
-                                                <include name="**/**"/>
-                                            </fileset>
-                                        </delete>
-                                    </tasks>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>com.atlassian.maven.plugins</groupId>
-                        <artifactId>maven-clover2-plugin</artifactId>
-                        <version>${clover.version}</version>
-
-                        <configuration>
-                            <license><![CDATA[rpRQNMNVbDQGOEFKsVQKeIihqPnFbdDEHvvNdDVKJlFhJhe
-									  mj2KgKqUCcBA763sFqgbibB52L0Cp0MzNnhQ88tyJuOnONl
-									  mQQqssopQmnQMMroQMPVTqPQRnpqrQNQOPTtWuTusvWnvSs
-									  vtWXTmTTTTSosUoWSxxStWuswtMRnmnmUUnppnpuqqmmmmm
-									  UUnppnpuqqmmmmmUU6fkkfpeWEXqflkXiW2lXoaWlcW5arZ
-									  XqflkUUor]]></license>
-                            <snapshot>${clover.snapshot}</snapshot>
-                            <singleCloverDatabase>${clover.singleCloverDatabase}</singleCloverDatabase>
-                            <cloverDatabase>${clover.cloverDatabase}</cloverDatabase>
-                            <outputDirectory>${clover.outputDirectory}</outputDirectory>
-                            <generateHistorical>${clover.generateHistorical}</generateHistorical>
-                            <historyDir>${clover.historyDir}</historyDir>
-                            <alwaysReport>true</alwaysReport>
-                            <generateXml>true</generateXml>
-                            <includesAllSourceRoots>true</includesAllSourceRoots>
-                            <!-- <includes> <include>**/api/**/*.java</include> <include>some/path/MyFile.java</include>
-                                [...] </includes> <excludes> <exclude>**/*Test/java</exclude> [...] </excludes>
-                                <targetPercentage>50%</targetPercentage> -->
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>clover</id>
-                                <goals>
-                                    <goal>setup</goal>
-                                    <!-- <goal>optimize</goal> -->
-                                    <goal>snapshot</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>clover</goal>
-                                    <goal>log</goal>
-                                    <!-- <goal>check</goal> disable check until we have selenium testi
-                                        up and running in bamboo -->
-                                    <goal>save-history</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-
-                    </plugin>
-                </plugins>
-            </build>
-            <dependencies>
-                <dependency>
-                    <groupId>com.cenqua.clover</groupId>
-                    <artifactId>clover</artifactId>
-                    <version>${clover.version}</version>
-                </dependency>
-                <dependency>
-                    <groupId>ant-contrib</groupId>
-                    <artifactId>ant-contrib</artifactId>
-                    <version>1.0b3</version>
-                    <exclusions>
-                        <exclusion>
-                            <groupId>ant</groupId>
-                            <artifactId>ant</artifactId>
-                        </exclusion>
-                    </exclusions>
-                </dependency>
-
-            </dependencies>
-        </profile>
-        <profile>
-            <id>sonar</id>
-            <properties>
-                <!-- Dynamic analysis relates to unit tests. By default, those unit tests
-                    are executed but you can optionally decide to do only static analysis or
-                    to reuse existing reports which have been previously generated. Possible
-                    values are true, false, reuseReports. -->
-                <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-
-                <!-- The absolute or relative path of the surefire reports directory.
-                    Used only if sonar.dynamicAnalysis is reuseReports. -->
-                <sonar.surefire.reportsPath>${project.build.directory}/surefire-reports</sonar.surefire.reportsPath>
-                <!-- The absolute or relative path of the clover xml report file. Used
-                    only if sonar.dynamicAnalysis is reuseReports. -->
-                <sonar.core.codeCoveragePlugin>clover</sonar.core.codeCoveragePlugin>
-                <sonar.clover.reportPath>${clover.outputDirectory}/clover.xml</sonar.clover.reportPath>
-
-                <!-- EXAMPLE FOR MYSQL mysqldump -usonar -pDx4k7T23x3ox8yS sonar > sonar.db.bak.sql -->
-                <sonar.jdbc.url>jdbc:mysql://localhost:3306/sonar?useUnicode=true&amp;characterEncoding=utf8
-                </sonar.jdbc.url>
-                <sonar.jdbc.driverClassName>com.mysql.jdbc.Driver</sonar.jdbc.driverClassName>
-                <sonar.jdbc.username>sonar</sonar.jdbc.username>
-                <sonar.jdbc.password>Dx4k7T23x3ox8yS</sonar.jdbc.password>
-                <!-- optional URL to server. Default value is http://localhost:9000 -->
-                <sonar.host.url>http://pulpetti.hard.ware.fi:9000/sonar</sonar.host.url>
-            </properties>
-            <dependencies>
-                <dependency>
-                    <groupId>org.codehaus.sonar-plugins</groupId>
-                    <artifactId>sonar-clover-plugin</artifactId>
-                    <version>2.8</version>
-                </dependency>
-            </dependencies>
-        </profile>
-
-        <profile>
-            <id>dev</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <properties>
-                <springProfileActive>dev</springProfileActive>
-                <log4jConfigLocation>/WEB-INF/classes/log4j.properties</log4jConfigLocation>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.tomcat.maven</groupId>
-                        <artifactId>tomcat7-maven-plugin</artifactId>
-                        <version>2.1</version>
-                        <configuration>
-                            <charset>UTF-8</charset>
-                            <uriEncoding>UTF-8</uriEncoding>
-                            <systemProperties>
-                                <spring.profiles.active>dev</spring.profiles.active>
-                            </systemProperties>
-                        </configuration>
-                    </plugin>
-                </plugins>
-                <resources>
-                    <resource>
-                        <directory>src/main/resources</directory>
-                    </resource>
-                </resources>
-
-            </build>
-        </profile>
-
-        <profile>
-            <id>devluokka</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-            <properties>
-                <springProfileActive>devluokka</springProfileActive>
-                <log4jConfigLocation>/WEB-INF/classes/log4j.properties</log4jConfigLocation>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.tomcat.maven</groupId>
-                        <artifactId>tomcat7-maven-plugin</artifactId>
-                        <version>2.1</version>
-                        <configuration>
-                            <charset>UTF-8</charset>
-                            <uriEncoding>UTF-8</uriEncoding>
-                            <systemProperties>
-                                <spring.profiles.active>devluokka</spring.profiles.active>
-                            </systemProperties>
-                        </configuration>
-                    </plugin>
-                </plugins>
-                <resources>
-                    <resource>
-                        <directory>src/main/resources</directory>
-                    </resource>
-                </resources>
-
-            </build>
-        </profile>
-
-        <profile>
-            <id>deploy</id>
-            <properties>
-                <springProfileActive>default</springProfileActive>
-                <log4jConfigLocation>file:///data00/oph/haku/oph-configuration/log4j.properties</log4jConfigLocation>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.13</version>
-                        <configuration>
-                            <skipTests>true</skipTests>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-
-        <profile>
-            <id>integration-test</id>
-            <properties>
-                <springProfileActive>it</springProfileActive>
-                <log4jConfigLocation>/WEB-INF/classes/log4j.properties</log4jConfigLocation>
-            </properties>
-            <build>
-                <resources>
-                    <resource>
-                        <directory>src/main/resources</directory>
-                    </resource>
-                </resources>
-                <testResources>
-                    <testResource>
-                        <directory>src/test/resources</directory>
-                    </testResource>
-                </testResources>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-failsafe-plugin</artifactId>
-                        <version>2.13</version>
-                        <configuration>
-                            <argLine>-Xms512M -Xmx1G -XX:MaxPermSize=256M</argLine>
-                            <includes>
-                                <include>**/it/*</include>
-                                <include>**/selenium/*</include>
-                            </includes>
-                            <testFailureIgnore>false</testFailureIgnore>
-                            <additionalClasspathElements>
-                                <additionalClasspathElement>/config/it/log4.properties</additionalClasspathElement>
-                            </additionalClasspathElements>
-                            <classpathDependencyExcludes>
-                                <classpathDependencyExcludes>net.sf.saxon:Saxon-HE</classpathDependencyExcludes>
-                            </classpathDependencyExcludes>
-                            <systemProperties>
-                                <spring.profiles.active>it</spring.profiles.active>
-                                <application.system.cache>false</application.system.cache>
-                            </systemProperties>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>integration-test</id>
-                                <goals>
-                                    <goal>integration-test</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <id>verify</id>
-                                <goals>
-                                    <goal>verify</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>buildversion.txt</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-antrun-plugin</artifactId>
-                        <version>1.7</version>
-                        <executions>
-                            <execution>
-                                <id>write buildversion.txt</id>
-                                <phase>process-resources</phase>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                                <configuration>
-                                    <target>
-                                        <echo file="target/${project.build.finalName}/buildversion.txt">
-                                            artifactId=${project.artifactId}
-                                            version=${project.version}
-                                            buildNumber=${project.build}
-                                            branchName=${branch}
-                                            vcsRevision=${revision}
-                                            buildTtime=${maven.build.timestamp}
-                                        </echo>
-                                    </target>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
 </project>
